# lung-deposition-prediction

./: .gitignore  LICENSE  README.md  app.py  best_model.pth  deposition_stacking_model_v1_20250628.joblib  dev-requirements.txt  predict_deposition.py  pyproject.toml  requirements.txt  test.py  test_model.py  train_model.py  trained model.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: final.csv
frontend/: index.html
