[project]
name = "lung-deposition-prediction"
version = "0.1.0"
description = "Lung deposition prediction web app"
requires-python = ">=3.11,<3.12"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Flask = "3.1.1"
joblib = "1.5.1"
scikit-learn = "1.5.0"
gunicorn = "22.0.0"
pandas = "2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
